# markbucciarelli.com

./: .gitignore  Makefile  README.md  TODO  about.html  index.html  markbucciarelli.cabal  mksitemap.sh  pom.xml  robots.txt  site.hs  stack.yaml
css/: default.css
deploy/: apache.sh  certbot.md  hosts  vhost.conf
deployments/: README.md  ansible.cfg  apache.yml  certbot.md  hosts  vhost-pre-ssl.conf  vhost-ssl.conf  vhost.conf
doc/: apache2.md  code-font-sizes.md  markdowntotufte.md  md2tufte.md  mkws-errors.md
imginfo/: aggregate.html  alpine.html  bridge.html  carnival.html  letters.html  lightning.html  nest.html  operator.html  redbug.html  service.html  tomato.html
posts/: 2016-06-22_parsing_text_with_erlang_pattern_matching_and_guards.html  2016-06-22_parsing_text_with_erlang_pattern_matching_and_guards.upphtml  2016-07-06_what_is_cqrs.html  2016-07-06_what_is_cqrs.upphtml  2016-07-20_my_first_erlang_patch.html  2016-07-20_my_first_erlang_patch.upphtml  2016-08-03_the_essence_of_otp.html  2016-08-03_the_essence_of_otp.upphtml  2016-08-17_erlang_error_handling_primitives.html  2016-08-17_erlang_error_handling_primitives.upphtml  2016-08-31_why_so_many_lambda_tshirts.html  2016-08-31_why_so_many_lambda_tshirts.upphtml  2016-09-14_simple_gen_event_example.html  2016-09-14_simple_gen_event_example.upphtml  2016-10-27_cqrs_versus_oop.html  2016-10-27_cqrs_versus_oop.upphtml  2016-11-09_a_simple_erlang_application.html  2016-11-09_a_simple_erlang_application.upphtml  2016-11-23_a_simple_erlang_application_with_prometheus.html  2016-11-23_a_simple_erlang_application_with_prometheus.upphtml  2016-12-07_a_closure_with_erlang.html  2016-12-07_a_closure_with_erlang.upphtml  2016-12-21_a_production_gen_event_application.html  2016-12-21_a_production_gen_event_application.upphtml  2017-01-04_how_to_return_json_from_an_erlang_web_service.html  2017-01-04_how_to_return_json_from_an_erlang_web_service.upphtml  2017-01-18_how_to_read_utf8_encoded_file_with_erlang.html  2017-01-18_how_to_read_utf8_encoded_file_with_erlang.upphtml  2017-03-22_some_cqrs_notes.html  (+37 more)
sandbox/snap-stack/: .gitignore  snap-stack.cabal
(+256 files in other folders)
