name:               markbucciarelli
version:            2.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:
    base      >= 4.6  && < 5,
    binary    >= 0.5  && < 0.9,
    directory >= 1.2  && < 1.4,
    filepath  >= 1.3  && < 1.5,
    hakyll    >= 4.10 && < 4.16,
    pandoc    >= 2.0  && < 2.18,
    process   >= 1.6  && < 1.7,
    text      >= 1.2  && < 1.3
  ghc-options:      -threaded
  default-language: Haskell2010
