name:                snap-stack
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/snap-stack#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable snap-stack-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , snap-stack
                     , bytestring                >= 0.9.1 && < 0.11
                     , monad-control             >= 1.0   && < 1.1
                     , mtl                       >= 2     && < 3
                     , snap-core                 >= 1.0   && < 1.1
                     , snap-server               >= 1.0   && < 1.1
  default-language:    Haskell2010

test-suite snap-stack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , snap-stack
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/snap-stack
